Edited 2019-2022 pages, and also added extra photos related to Olympics

--- a/myAccomplishments2021.html
+++ b/myAccomplishments2021.html
@@ -68,6 +68,7 @@
         Призёр муниципального этапа во всероссийской олимпиаде школьников по математике
     </a>
 </div>
+<div>
     <a href="winContestPhys.html" id="para3">
         Призёр муниципального этапа во всероссийской олимпиаде школьников по физике
     </a>
